Fix breadcrumb crumb names to fixed 4-line height with consistent container sizes
- Changed breadcrumb item name from 3 lines to 4 lines
- Added fixed height to breadcrumb containers (4 lines for name + 1 line for amount)
- Added vertical centering for names with fewer than 4 lines
- Ensured consistent container sizes across all breadcrumb items
- Updated mobile responsive styles to maintain consistency

--- a/index.html
+++ b/index.html
@@ -300,6 +300,33 @@
             font-size: 0.875rem;
             cursor: pointer;
             transition: background-color 0.2s;
+            display: flex;
+            flex-direction: column;
+            line-height: 1.4;
+            max-width: 200px; /* Limit width to encourage wrapping */
+            min-height: calc(1.4em * 5); /* Fixed height: 4 lines for name + 1 line for amount */
+            justify-content: space-between; /* Distribute name and amount evenly */
+        }
+
+        .breadcrumb-item-name {
+            display: -webkit-box;
+            -webkit-line-clamp: 4; /* Limit to 4 lines */
+            line-clamp: 4; /* Standard property for compatibility */
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            min-height: calc(1.4em * 4); /* Fixed height for 4 lines */
+            display: flex;
+            align-items: center; /* Vertically center content if less than 4 lines */
+        }
+
+        .breadcrumb-item-amount {
+            margin-top: 0.25rem;
+            text-align: left;
+            font-weight: 600;
+            color: #2e7d32;
+            font-size: 0.8rem;
+            min-height: 1.4em; /* Fixed height for 1 line */
         }
 
         .breadcrumb-item:hover {
@@ -307,13 +334,20 @@
             color: white;
         }
 
+        .breadcrumb-item:hover .breadcrumb-item-amount {
+            color: white;
+        }
+
         .breadcrumb-item.amount {
-            color: #2e7d32;
             background: #e8f5e9;
         }
 
         .breadcrumb-item.amount:hover {
             background: #2e7d32;
+            color: white;
+        }
+
+        .breadcrumb-item.amount:hover .breadcrumb-item-amount {
             color: white;
         }
 
@@ -355,9 +389,10 @@
             }
 
             .controls {
-                flex-direction: column;
-                align-items: stretch;
+                flex-direction: row; /* Single line on mobile */
+                align-items: center;
                 gap: 0.5rem;
+                flex-wrap: wrap; /* Allow wrapping if needed */
             }
 
             .btn {
@@ -371,13 +406,15 @@
 
             .breadcrumb-container {
                 padding: 0.35rem 0.75rem;
-            }
-
-            .breadcrumb-label {
-                font-size: 0.75rem;
+                -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+                scrollbar-width: thin; /* Thinner scrollbar on mobile */
             }
 
             .breadcrumb-path {
+                min-width: max-content; /* Allow horizontal scroll */
+            }
+
+            .breadcrumb-label {
                 font-size: 0.75rem;
             }
 
@@ -388,6 +425,17 @@
             .breadcrumb-item {
                 font-size: 0.75rem;
                 padding: 0.2rem 0.4rem;
+                max-width: 150px; /* Smaller max-width on mobile */
+                min-height: calc(1.4em * 5); /* Fixed height: 4 lines for name + 1 line for amount */
+            }
+
+            .breadcrumb-item-name {
+                min-height: calc(1.4em * 4); /* Fixed height for 4 lines */
+            }
+
+            .breadcrumb-item-amount {
+                font-size: 0.7rem;
+                min-height: 1.4em; /* Fixed height for 1 line */
             }
 
             .container {
@@ -396,6 +444,7 @@
 
             .tree {
                 padding: 1rem;
+                word-wrap: break-word; /* Break long words */
             }
 
             .node-header {
@@ -407,6 +456,7 @@
             .node-title {
                 font-size: 0.9rem;
                 flex: 1;
+                word-wrap: break-word; /* Allow text to wrap instead of truncate */
             }
 
             .node-amount {
@@ -417,6 +467,37 @@
             .node-description {
                 font-size: 0.8rem;
                 padding: 0.5rem;
+            }
+
+            /* Reduce indentation on mobile to prevent compression */
+            .node-content {
+                margin-left: 0.5rem; /* Much smaller indentation on mobile */
+                padding-left: 0.5rem;
+                border-left-width: 1px; /* Thinner border on mobile */
+            }
+
+            /* Ensure sticky elements stay on top and stack properly */
+            .header {
+                position: sticky;
+                top: 0;
+                z-index: 1002;
+            }
+
+            .controls {
+                position: sticky;
+                top: 0; /* Will be calculated dynamically by JS */
+                z-index: 1001;
+            }
+
+            .breadcrumb {
+                position: sticky;
+                top: 0; /* Will be calculated dynamically by JS */
+                z-index: 1000;
+            }
+
+            /* Add padding to tree to account for sticky elements */
+            .tree {
+                padding-top: 0.5rem;
             }
         }
     </style>
@@ -609,6 +690,23 @@
             tree.classList.toggle('mobile-hidden');
         }
 
+        // Update sticky element positions for mobile
+        function updateStickyPositions() {
+            if (window.innerWidth <= 768) {
+                const header = document.querySelector('.header');
+                const controls = document.querySelector('.controls');
+                const breadcrumb = document.querySelector('.breadcrumb');
+
+                if (header && controls && breadcrumb) {
+                    const headerHeight = header.offsetHeight;
+                    const controlsHeight = controls.offsetHeight;
+
+                    controls.style.top = `${headerHeight}px`;
+                    breadcrumb.style.top = `${headerHeight + controlsHeight}px`;
+                }
+            }
+        }
+
         // Render the hierarchy tree
         function renderTree() {
             nodeCount = 0;
@@ -633,6 +731,9 @@
             // Update stats
             document.getElementById('nodeCount').textContent = `Nodes: ${nodeCount}`;
 
+            // Update sticky positions for mobile
+            updateStickyPositions();
+
             // Initialize breadcrumb with first visible node
             setTimeout(() => {
                 updateBreadcrumbForCurrentView();
@@ -651,6 +752,11 @@
                     updateBreadcrumbForCurrentView();
                     scrollTimeout = null;
                 }, 50);
+            });
+
+            // Update sticky positions on window resize
+            window.addEventListener('resize', () => {
+                updateStickyPositions();
             });
 
             console.log(`[Breadcrumb] Scroll listener attached to window`);
@@ -766,7 +872,10 @@
                 if (hasChildren) {
                     html += '<span class="breadcrumb-separator">›</span>';
                     if (item.amount !== null && item.amount !== undefined) {
-                        html += `<span class="breadcrumb-item amount" title="${item.value}: ₱${formatNumber(item.amount)}" onclick="scrollToNode('${item.nodeId}')">${item.value}</span>`;
+                        html += `<span class="breadcrumb-item amount" title="${item.value}: ₱${formatNumber(item.amount)}" onclick="scrollToNode('${item.nodeId}')">
+                            <span class="breadcrumb-item-name">${item.value}</span>
+                            <span class="breadcrumb-item-amount">₱${formatNumber(item.amount)}</span>
+                        </span>`;
                     } else {
                         html += `<span class="breadcrumb-item" title="${item.value}" onclick="scrollToNode('${item.nodeId}')">${item.value}</span>`;
                     }
@@ -780,6 +889,15 @@
                 return index < path.length - 1;
             });
             console.log(`[Breadcrumb] Updated breadcrumb: ${displayedItems.map(p => p.value).join(' > ')} (showing ${displayedItems.length} of ${path.length} total, ${path.length - displayedItems.length} leaf nodes skipped)`);
+
+            // Auto-scroll breadcrumb to rightmost part
+            const breadcrumbContainer = document.querySelector('.breadcrumb-container');
+            if (breadcrumbContainer) {
+                // Use setTimeout to ensure DOM is updated before scrolling
+                setTimeout(() => {
+                    breadcrumbContainer.scrollLeft = breadcrumbContainer.scrollWidth;
+                }, 0);
+            }
         }
 
         // Load JSON data
